--- a/client/package.json
+++ b/client/package.json
@@ -1,12 +1,20 @@
-{
+x
+:x
+
+
+
+x
+x
+
   "name": "revigorelife-static",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "build:static": "vite build --config ../vite.config.static.ts",
-    "preview": "vite preview"
+    "build:static": "vite build --config ./vite.config.static.ts",
+    "preview": "vite preview",
+    "deploy": "npm run build:static && gh-pages -d dist -t true -m \"Deploy static site\""
   },
   "scripts": {
   "dev": "vite",
@@ -28,15 +36,18 @@
     "wouter": "^3.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
-    "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.17",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
   },
-  "overrides": { "esbuild": "^0.25.0" }
+  "overrides": {
+    "esbuild": "^0.25.0"
+  }
 }
