--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -25,10 +25,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
+          cache: npm
           cache-dependency-path: client/package-lock.json
 
-      - name: Install deps
+      - name: Install dependencies
         working-directory: client
         run: npm ci
 
@@ -36,8 +36,7 @@ jobs:
         working-directory: client
         run: npm run build:static
 
-      # This is the key line: upload the build from client/dist
-      - name: Upload artifact
+      - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: client/dist
